tests/baselines/reference/asyncFunctionNoReturnType.errors.txt
error TS2468: Cannot find global value 'Promise'.
tests/cases/compiler/asyncFunctionNoReturnType.ts(1,1): error TS2705: An async function or method in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.


!!! error TS2468: Cannot find global value 'Promise'.
==== tests/cases/compiler/asyncFunctionNoReturnType.ts (1 errors) ====
    async () => {
    ~~~~~~~~~~~~~
!!! error TS2705: An async function or method in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
        if (window)
            return;
    }
    